2025-04-25T01:19:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14654888168 # 624
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-25
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 135 373 / 139 387
* notice: next accum: outdated-unq outdated-all / unq all: 136 377 / 139 387
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-04-10] / []

2025-04-24T01:19:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14631325429 # 623
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-24
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 134 368 / 138 381
* notice: next accum: outdated-unq outdated-all / unq all: 135 373 / 139 387
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [2025-04-09] / [2025-04-23]

2025-04-13T02:45:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14425322507 # 612
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-13
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 134 368 / 137 379
* notice: next accum: outdated-unq outdated-all / unq all: 134 368 / 138 381
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-04-12]

2025-04-12T01:16:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14414683775 # 611