@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-25T01:19:52Z",
-  "count_outdated" : 377,
-  "uniques_outdated" : 136,
+  "timestamp" : "2025-04-26T01:16:52Z",
+  "count_outdated" : 379,
+  "uniques_outdated" : 137,
   "count" : 387,
   "uniques" : 139,
   "views" : [
-    {
-      "timestamp": "2025-04-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-12T00:00:00Z",
       "count": 2,
