@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 3,
+  "count": 8,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2025-04-11T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-12T00:00:00Z",
       "count": 2,
